--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -135,7 +135,17 @@
       font-family: Inter-Regular, Inter;
       font-weight: 400;
       color: #222222;
-      line-height: 2rem;
+      // line-height: 2rem;
+      h4 {
+        font-size: 1.5rem;
+        line-height: 2rem;
+      }
+      p {
+        font-size: 1.33rem;
+      }
+      a {
+        text-decoration: underline;
+      }
     }
     .strategyLink {
       display: inline-flex;
