--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -77,7 +77,8 @@
     .dropDesc {
       background: #8e50e4;
       border-radius: 1rem;
-      height: 10.83rem;
+      min-height: 10.83rem;
+      height: auto;
       background-repeat: no-repeat;
       position: relative;
       overflow: hidden;
@@ -631,15 +632,21 @@
       margin-bottom: 0;
       .dropDesc {
         align-items: flex-start;
-        height: 20rem;
+        min-height: 20rem;
+        height: auto;
         padding: 1.67rem 1.33rem;
         p {
-          width: 80%;
+          width: 85%;
+          position: relative;
+          z-index: 100;
         }
         .bg {
           right: 0;
+          z-index: 0;
         }
         .bg_ill {
+          z-index: 0;
+
           right: -1rem;
           bottom: 2rem;
         }
