--- a/components/PageCarnival/GiftCodeModal/style.module.scss
+++ b/components/PageCarnival/GiftCodeModal/style.module.scss
@@ -1,4 +1,3 @@
-
 .giftBox {
   width: 34.17rem;
   padding: 2.5rem;
@@ -9,12 +8,54 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    user-select: none;
     p {
       font-size: 1.75rem;
       font-family: Inter-Bold, Inter;
       font-weight: bold;
       color: rgba(#222, 0.8);
       line-height: 1.75rem;
+    }
+  }
+  .container {
+    .giftBox {
+      margin: 2.5rem auto 1.5rem;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      align-items: center;
+      background-color: #fcf0f2;
+      height: 3rem;
+      font-size: 1.75rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #222222;
+      line-height: 2.5rem;
+    }
+    p {
+      font-style: italic;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .giftBox {
+    width: 80vw;
+    margin: auto;
+    padding: 1.67rem;
+
+    .modalHeader {
+      p {
+        font-size: 1.5rem;
+        font-family: Inter-Bold, Inter;
+        font-weight: bold;
+        color: rgba(#222, 0.5);
+        line-height: 1.5rem;
+      }
+    }
+    .container {
+      .giftBox {
+      }
     }
   }
 }
