fix: address copy

--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -128,7 +128,8 @@
       }
     }
 
-    & > div {
+    .exitIcon {
+      cursor: pointer;
       position: relative;
       width: 2rem;
       height: 2rem;
