--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -138,17 +138,14 @@
   position: relative;
   padding: 1.67rem 1.33rem;
   background-color: white;
-  box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(255, 61, 90, 0.2);
+  box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(142,80,228,0.2);
   border-radius: 0.67rem;
-  border-top: 0.83rem solid rgba(#ff3d5a, 0.3);
+  border-top: 0.83rem solid;
 
   .itemLabel {
     position: absolute;
     width: 3.33rem;
     height: 3rem;
-    background: #3c3c3c;
-    box-shadow: -0.17rem 0.17rem 0.33rem 0rem #222222;
-    border-radius: 0rem 1rem 0rem 1rem;
     top: -1.5rem;
     font-size: 1.75rem;
     font-family: Inter-SemiBold, Inter;
@@ -159,6 +156,9 @@
     align-items: center;
     justify-content: center;
     border-color: transparent;
+    background: linear-gradient(180deg, #6effc4 0%, #984cec 100%);
+    box-shadow: -0.17rem 0.17rem 0.33rem 0rem rgba(142, 80, 228, 0.3);
+    border-radius: 0rem 1rem 0rem 1rem;
     &::before {
       display: block;
       content: '';
@@ -166,51 +166,68 @@
       height: 0;
       position: absolute;
       border: 4px solid transparent;
-      border-right: 4px solid #3c3c3c;
-      border-bottom: 4px solid #3c3c3c;
+      border-right: 4px solid #4d3372;
+      border-bottom: 4px solid #4d3372;
       left: -8px;
       top: 0px;
     }
   }
+  .spendTime {
+    font-size: 1rem;
+    font-family: PingFangSC-Medium, PingFang SC;
+    font-weight: 500;
+    color: rgba(#222, 0.5);
+    line-height: 1rem;
+    margin: 1.67rem auto 0.83rem;
+  }
   p {
-    font-size: 1.5rem;
-    font-family: Inter-SemiBold, Inter;
-    font-weight: 600;
+    font-size: 1.33rem;
+    font-family: Inter-Medium, Inter;
+    font-weight: 500;
     color: #222222;
-    line-height: 2.33rem;
+    line-height: 2rem;
   }
   .actionArea {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 1.17rem;
+    margin-top: 2.5rem;
+
+    .startBtn {
+      display: inline-block;
+      height: 3.33rem;
+      background: #8e50e4;
+      text-align: center;
+      border-radius: 1.67rem;
+      filter: blur(0px);
+      font-size: 1.17rem;
+      font-family: PingFangSC-Medium, PingFang SC;
+      font-weight: 500;
+      color: #ffffff;
+      line-height: 3.33rem;
+      padding: 0 5rem;
+      cursor: pointer;
+    }
 
     .claimBtn {
       flex-shrink: 0;
-      width: 8rem;
       text-align: center;
-      margin-right: 0.5rem;
-      background: rgba(255, 255, 255, 0);
+
       border-radius: 1.67rem;
-      border: 1px solid #ba449a;
       user-select: none;
-      padding: 0.92rem;
 
+      height: 3.33rem;
+      background: rgba(#8e50e4, 0.1);
+      border-radius: 1.67rem;
+      filter: blur(0px);
       font-size: 1.17rem;
-      font-family: Inter-SemiBold, Inter;
-      font-weight: 600;
-      color: #ffffff;
-      line-height: 1.17rem;
-      background: linear-gradient(270deg, #e4405b 0%, #8e50e4 100%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      cursor: pointer;
+      font-family: Inter-Medium, Inter;
+      font-weight: 500;
+      color: #8e50e4;
+      line-height: 3.33rem;
+      padding: 0 4.75rem;
 
-      &:hover {
-        background: linear-gradient(270deg, #f82757 0%, #984cec 100%);
-        border-color: transparent;
-        -webkit-text-fill-color: white;
-      }
+      cursor: pointer;
     }
     .claimedBtn {
       cursor: default;
@@ -271,5 +288,20 @@
 
   & + .mobileCarnivalRewardItem {
     margin-top: 2.33rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .mobileCarnivalRewardItem {
+    .actionArea {
+      .startBtn {
+        width: 45%;
+        padding: 0;
+      }
+      .claimBtn {
+        width: 45%;
+        padding: 0;
+      }
+    }
   }
 }
