feat: download button setting

--- a/components/GameTaskDrawer/styles.module.scss
+++ b/components/GameTaskDrawer/styles.module.scss
@@ -1,5 +1,6 @@
 .taskBox {
   height: 90vh;
+  height: calc(100vh - 9rem);
   background: #f6f1fd;
   padding: 1.5rem 1.33rem;
   overflow-y: scroll;
