--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -259,7 +259,7 @@
   background-color: white;
   box-shadow: 0rem 0.83rem 1.67rem 0rem rgba(142, 80, 228, 0.2);
   border-radius: 0.67rem;
-  border-top: 0.83rem solid;
+  border-top: 0.83rem solid white;
 
   .itemLabel {
     position: absolute;
