--- a/components/PageCarnival/RewardItem/styles.module.scss
+++ b/components/PageCarnival/RewardItem/styles.module.scss
@@ -84,7 +84,7 @@
         margin-top: 1.67rem;
         display: flex;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: flex-start;
         flex-grow: 1;
 
         .descBtnBox {
@@ -292,12 +292,15 @@
     }
   }
   .spendTime {
+    text-align: right;
     font-size: 1rem;
     font-family: PingFangSC-Medium, PingFang SC;
     font-weight: 500;
     color: rgba(#222, 0.5);
     line-height: 1rem;
-    margin: 1.67rem auto 0.83rem;
+    // margin: 1.67rem auto 0.83rem;
+    margin-top: -1rem;
+    margin-bottom: 1.5rem;
   }
   p {
     font-size: 1.33rem;
@@ -313,6 +316,7 @@
     margin-top: 2.5rem;
 
     .startBtn {
+      width: 55%;
       display: inline-block;
       height: 3.33rem;
       background: #8e50e4;
@@ -329,7 +333,8 @@
     }
 
     .claimBtn {
-      flex-shrink: 0;
+      // flex-shrink: 0;
+      width: 10rem;
       text-align: center;
 
       border-radius: 1.67rem;
@@ -344,7 +349,6 @@
       font-weight: 500;
       color: #8e50e4;
       line-height: 3.33rem;
-      padding: 0 4.75rem;
 
       cursor: pointer;
     }
@@ -436,11 +440,12 @@
   .mobileCarnivalRewardItem {
     .actionArea {
       .startBtn {
-        width: 45%;
+        width: 55%;
         padding: 0;
       }
       .claimBtn {
-        width: 45%;
+        width: 35%;
+        min-width: 7rem;
         padding: 0;
       }
     }
