--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -679,9 +679,9 @@
 
       .rewardDesc {
         P {
-          font-size: 1.17rem;
-          font-family: Inter-Regular, Inter;
-          font-weight: 400;
+          font-size: 1.33rem;
+          font-family: Inter-Medium, Inter;
+          font-weight: 500;
           color: #8e50e4;
           line-height: 2rem;
         }
